--- a/src/components/Select/_style.scss
+++ b/src/components/Select/_style.scss
@@ -1,4 +1,4 @@
-.viking-select-wrapper {
+.jiangye-select-wrapper {
     position: relative;
     .select-options {
         position: absolute;
@@ -31,7 +31,7 @@
                 color: $primary;
                 background-color: lighten($blue, 35%);
             }
-            .viking-icon {
+            .jiangye-icon {
                 position: absolute;
                 right: 0.75rem;
                 top: 0;
