--- a/src/components/Progress/_style.scss
+++ b/src/components/Progress/_style.scss
@@ -1,13 +1,13 @@
-.viking-progress-bar {
+.jiangye-progress-bar {
   width: 100%;
   box-sizing: border-box;
-  .viking-progress-bar-outer {
+  .jiangye-progress-bar-outer {
     border-radius: $progress-border-radius;
     background-color: $progress-bg;
     overflow: hidden;
     position: relative;
   }
-  .viking-progress-bar-inner {
+  .jiangye-progress-bar-inner {
     position: absolute;
     left: 0;
     top: 0;
